crates/elenchus-parser/tests/snapshots/errors__and_literal_missing.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE g:\n            WHEN x a\n            AND\n            THEN x b\n        \"#)"
---
RESULT: 1 syntax error

THEN  (1 problem)
  syntax  : THEN <literal>
  example : THEN motor uses fast_path
    line 4, col 13 - expected THEN to complete the WHEN ... THEN implication
      |             AND
      |             ^^^
